--- a/author/templates/contact/contact_page.html
+++ b/author/templates/contact/contact_page.html
@@ -49,9 +49,9 @@
     <div class="inner">
       <h3 class="masthead-brand">Simba Sana</h3>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link" href="index.html">Book</a>
-        <a class="nav-link" href="quote.html">Quote</a>
-        <a class="nav-link active" href="contact.html">Contact</a>
+        <a class="nav-link" href="">Book</a>
+        <a class="nav-link" href="">Quote</a>
+        <a class="nav-link active" href="">Contact</a>
       </nav>
     </div>
   </header>
