--- a/author/templates/home/home_page.html
+++ b/author/templates/home/home_page.html
@@ -49,15 +49,15 @@
       <nav class="nav nav-masthead justify-content-center">
         <a class="nav-link active" href="">Book</a>
         <a class="nav-link" href="">Quote</a>
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="">Contact</a>
       </nav>
     </div>
   </header>
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Never Stop</h1>
+    <h1 class="cover-heading">{{ self.banner_title }}</h1>
+    <!-- <p class="lead">{{ self.banner_subtitle }}</p> -->
     <p class="lead">A Memoir</p>
-    
   </main>
 
   <footer class="mastfoot mt-auto">
